Update favicon to user photo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/jpeg" href="/favicon.jpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Portfolio Adi Arwan Syah - Mahasiswa Sistem Informasi & Machine Learning Enthusiast. Passionate about AI, Deep Learning, NLP, and Computer Vision." />
